content is aligned correctly but the headers are too tall

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,13 +7,18 @@
 --congo-pink: #FF7E77ff;
 --sandy-brown: #FF9F5Dff;
 --ghost-white: #F4F4F8;
+--blue-green: #018FB7ff;
+--denim: #0159B5ff;
+--azure: #0084FFff;
+--medium-aquamarine: #00E2B0ff;
+--mountain-meadow: #01C1A4ff;
 --boldfont: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 --pfont: Georgia, 'Times New Roman', Times, serif;
 }
 
 body {
     background-color: var(--ghost-white);
-    color: var(--antique-ruby);
+    color: var(--denim);
     font-family: var(--pfont);
     margin: auto;
 }
@@ -31,7 +36,7 @@ body {
     background-color: var(--sandy-brown);
     flex: 0 1 100px;
     text-align: right;
-    padding: 10px 10px 10px 0px;
+    padding: 10px 10px 10px 50px;
     color: var(--ghost-white);
     font-family: var(--boldfont);
 }
@@ -62,7 +67,27 @@ body {
     /* display: block; */
     /* position: absolute; */
     /* scaling is strange with vw, but maybe padding is whats off? */
-    padding-left: 70vw;
+    padding-left: 5vw;
 }
 
+/* main content - 3 sections */
+.midcontainer {
+    display: flex;
+    flex-wrap: wrap;
+}
 
+section h2 {
+    background-color: var(--sandy-brown);
+    flex: 0 1 100px;
+    text-align: right;
+    padding: 10px 10px 10px 50px;
+    color: var(--ghost-white);
+    font-family: var(--boldfont);
+}
+
+section div p {
+    border: 2px solid var(--brink-pink);
+    padding: 10px;
+    flex: 1 1 80%;
+    max-width: 600px;
+}
